# Lot-Streaming-Job-Shop-Scheduling-Genetic-Algorithm

./: .gitignore  DEPRECATED_GA_guide.ipynb  GA.py  GA_guide.ipynb  LICENSE  LSJSSP_GA_Guide.ipynb  README.md  chromosome.py  chromosome_OOP.py  chromosome_generator.py  decoder.py  genetic_algorithm.py  genetic_algorithm_OOP.py  genetic_algorithm_POO.py  genetic_operators.py  main.py  params.py  plot.py  plotting_ga.py  pyproject.toml  requirements.txt
.github/worflows/: ruff.yaml  test.yaml
.github/workflows/: mypy.yaml  test.yaml
config/genetic_algorithm/: ga_config_01.yaml
config/jobshop/: ga_config_01.yaml  js_params_01.yaml
src/: __init__.py  chromosome_generator.py  decoder.py  genetic_algorithm.py  genetic_operators.py  params.py  plot.py  utils.py
src/domain/: __init__.py  scheduling.py
src/genetic/: __init__.py  algorithm.py  chromosome.py  metrics.py  operators.py  results.py
src/jobshop/: __init__.py  params.py  reporting.py  types.py
src/legacy/: __init__.py  decoder.py
src/plotting/: __init__.py  application.py  domain.py  evolution.py  gantt.py  infra.py  mappers.py  services.py
src/scheduling/: __init__.py  application.py  decoder.py  lot_sizing.py  mappers.py  rules.py  services.py  state.py
src/shared/: types.py  utils.py
tests/: conftest.py  test_chromosome_generator.py  test_decoder_consistency.py
