[project]
name = "lot-streaming-job-shop-scheduling-genetic-algorithm"
version = "0.1.0"
description = ""
authors = [{ name = "Francisco Vallejo", email = "fco.vallejogt@gmail.com" }]
readme = "README.md"

requires-python = "==3.11.4"

dependencies = [
    "plotly==5.9.0",
    "numpy==1.26.4",
    "deap==1.4.0",
    "matplotlib==3.8.0",
    "pandas==2.1.4",
    "PyYAML>=6.0,<7.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "scheduling", from = "src" },
    { include = "plotting", from = "src" },
    { include = "shared", from = "src" },
    { include = "domain", from = "src" },
    { include = "genetic", from = "src" },
    { include = "jobshop", from = "src" },
    { include = "legacy", from = "src" },
]


[tool.poetry.group.dev.dependencies]
pytest = "~=8.4.0"
ruff = "^0.5.0"
mypy = "^1.17.1"
notebook = "^7.4.5"
ipykernel = "^6.30.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--ignore=tests_legacy"]
